--- a/style.css
+++ b/style.css
@@ -239,24 +239,21 @@ padding-bottom: 50px;
     padding-bottom: 10px;
 }
 .email-box{
-  border: 1px solid;
-  border-radius: 10px;
-  margin-right: 30%;
-  margin-left: 30%;
-  background-color: white;
+    display: flex;
+    gap: 5px;
+    justify-content: center;
 }
-.email-box  input{
-    border: none;
+.email-box input {
     padding: 5px;
-    border-radius: 10px;
+    color: white;
+    border-radius: 5px;
+    
 }
 .email-box button{
-    border: none;
-    border-radius: 6px;
-    padding: 5.3px;
-    margin-left:50px;
-    background-color:blue;
-    color: aliceblue;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: crimson;
+    color: azure;
 }
 
 /* sponsore style */
