mobile responsive added

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ padding-bottom: 50px;
     justify-content: center;
 }
 .spon-company-name img{
-    width: 100px;
+    width: 100%;
     filter: grayscale(100%);
 }
 /* footer styles */
@@ -295,4 +295,59 @@ footer{
 }
 .footer-text{
     font-size: 12px;
+}
+/* responsive media query */
+
+/* mobile responsive */
+
+@media only screen and (max-width:688px) {
+   nav .menu-list{
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+   } 
+   nav{
+    flex-direction: column;
+   }
+   .header-image img{
+    width: 100%;
+   }
+   .header-image{
+    padding: 20px;
+   }
+   .quick-section{
+    flex-direction: column;
+   }
+   .quick-image{
+    grid-template-columns: repeat(1,1fr);
+    align-items: center;
+    padding-right: 60px;
+   }
+   .quick-image img{
+    height: 200px;
+    width: 305px;
+   }
+   .quick-text{
+    padding-left: 90px;
+   }
+   .love-section{
+    flex-direction: column;
+   }
+   .love-title{
+    font-size: 40px;
+   }
+   .button-year{
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+    transform: translate(0px,-120px);
+}
+.button-year button{
+    padding: 10px 20px;
+}
+.fact-item{
+    grid-template-columns: repeat(1,1fr);
+    gap: 35px;
+    padding-left: 50px;
+}
 }
